--- a/style.css
+++ b/style.css
@@ -1,35 +1,53 @@
 *{
     margin: 0;
     padding: 0;
-    font-size: medium;
-    box-sizing: border-box;
 }
-.body{
+body{
+    position: relative;
+}
+legend{
+    align-items: center;
+    font-size: 40px;
     padding: 20px;
 }
-h2{
-    text-align: center;
-}
-.container{
-    padding: 20px;
-}
-input[type=text],input[type=password],input[type=email],input[type=number]{
-    width: 100%;
+table{
     border: 2px solid black;
-    padding: 10px;
-    margin: 5px 0 22px;
-    display: inline-block;
-    border-radius: 10px;
+    padding: 12px;
+    margin: 20px;
+    font-weight: 800;
 }
-div{
-    padding: 10px;
+tr td{
+    padding: 3px;
+    font-size: 20px;
 }
-.register{
-    background-color: black;
-    color: white;
-    border: none;
-    cursor: pointer;
-    width: 20%;
-    padding: 20px;
-    margin: 10px;
+#name{
+    height: 25px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+#email{
+    height: 25px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+#pwd{
+    height: 25px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+#phno{
+    height: 25px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+#sbtn{
+    width: 150px;
+    height: 30px;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
 }
